<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient"
        tools:context=".ui.editArticle.EditAnnouncementFragment">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_announcement_title"
            android:layout_marginTop="30dp"
            android:textColor="#0099CC"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/et_title_edit_announcement_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="title"
        android:backgroundTint="#B6B6B6"
        android:ems="10"
        android:hint="@string/title_hint"
        android:inputType="text"
        android:maxLength="80"
        android:minHeight="48dp"
        android:textColorHint="#0099CC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/tv_content_text_edit_announcement_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/content_label"
        android:textColor="#0099CC"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_title_edit_announcement_fragment" />

    <EditText
        android:id="@+id/et_content_edit_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="content"
        android:backgroundTint="#B6B6B6"
        android:inputType="textMultiLine"
        android:minHeight="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_content_text_edit_announcement_fragment"
        tools:ignore="SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/et_picture_edit_announcement_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="Picture"
        android:backgroundTint="#B6B6B6"
        android:ems="10"
        android:hint="@string/image_url_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#0099CC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_content_edit_fragment"
        tools:ignore="VisualLintTextFieldSize" />

    <ImageView
        android:id="@+id/iv_edit_announcement_fragment"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo_loue_tout_facile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_picture_edit_announcement_fragment"
        android:contentDescription="@string/default_image_content_description" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_edit_announcement_fragment">

        <RadioButton
            android:id="@+id/rb_manutention_edit_announcement_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/handling_option"
            app:layout_constraintStart_toEndOf="@+id/radioButton7" />

        <RadioButton
            android:id="@+id/rb_outillage_edit_announcement_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tools_option"
            app:layout_constraintStart_toEndOf="@+id/radioButton8" />

        <RadioButton
            android:id="@+id/rb_gardening_edit_article_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/green_spaces_option"
            app:layout_constraintStart_toEndOf="@+id/radioButton9" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3">

        <RadioButton
            android:id="@+id/rb_status_rented_edit_announcement_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rented_status"
            app:layout_constraintStart_toEndOf="@+id/radioButton10" />

        <RadioButton
            android:id="@+id/rb_status_reserved_edit_announcement_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reserved_status"
            app:layout_constraintStart_toEndOf="@+id/radioButton11" />

        <RadioButton
            android:id="@+id/rb_status_available_edit_article_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/available_status"
            app:layout_constraintStart_toEndOf="@+id/radioButton12" />
    </RadioGroup>

    <EditText
        android:id="@+id/et_price_edit_announcement_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="title"
        android:backgroundTint="#B6B6B6"
        android:ems="10"
        android:hint="@string/price_hint"
        android:inputType="text"
        android:maxLength="80"
        android:minHeight="48dp"
        android:textColorHint="#0099CC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup4"
        tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/btn_submit_edit_article_activity"
            style="@style/CustomMaterialButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/validate_button"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_price_edit_announcement_fragment" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>